--- a/src/styles/Certifications.css
+++ b/src/styles/Certifications.css
@@ -74,7 +74,7 @@
   height: 150px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 30px;
+  padding-top: 40px;
 }
 
 .projectPic{
@@ -86,12 +86,29 @@
 }
 
 .leftProjectCard p{
-  padding-top: 40px;
+  padding-top: 50px;
   font-style: italic;
 }
 
 .rightProjectCard h2{
   padding-top: 30px;
+}
+
+.rightProjectCard h4{
+  text-align: left;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: large;
+  font-weight: bold;
+  padding-top: 10px;
+}
+
+.rightProjectCard ul{
+  text-align: left;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .rightProjectCard p{
@@ -100,4 +117,5 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 
