--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -5,13 +5,7 @@
     overflow: hidden;
     height: 80vh;
     position: relative;
-    background-image: url(../assets/backgroundPlaceholder.jpg);
-    background-size: 100%;
-    background-position: center;
-    background-repeat:no-repeat;
-    text-align: center;
-    background-attachment: fixed;
-    background-size: cover;
+    background: linear-gradient(#010540, #070807);
 
 }
 
@@ -20,36 +14,13 @@
     display: inline-block;
     padding-top: 30vh;
     margin: auto;
-    font-size: 50px;
+    font-size: large;
     text-align: center;
-    color: black;
+    color: white;
 
 }
 .tag h1{
     font-size: 70px;
     font-weight: bold;
-}
-
-.introLeft .bio{
-    position: absolute;
-    opacity: 80%;
-    bottom: 0px;
-    width: 3%;
-    height: 100%;
-    background-color: black;
-    color: white;
-    right: 0px;
-    padding-left: 4%;
-    padding-top: 50px;
-    display: table-row; 
-    text-align: left;
-    transition: 0.5s;
-    overflow-x: hidden;
-    white-space: nowrap;
-}
-
-.bio:hover{
-    width: 25%;
-    transition: 0.5s;
 }
 
